--- a/Level1/Unit4/listening.html
+++ b/Level1/Unit4/listening.html
@@ -23,48 +23,14 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
 
-        // Função para obter Level e Unit da URL
-        function getLevelAndUnitFromURL() {
-            const url = window.location.pathname; // Exemplo: "/Level1/Unit4/Flashcards/index.html"
-            const parts = url.split('/'); // Divide a URL por "/"
-            const level = parts[1]; // Obtém "Level1"
-            const unit = parts[2]; // Obtém "Unit4"
-            return { level, unit };
-        }
-
-        // Função para criar fase1 se não existir
-        function createPhase1IfNotExists(userId) {
-            const { level, unit } = getLevelAndUnitFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/fase1`);
-
-            // Verificar se a fase1 já existe
-            dbRef.once('value')
-                .then((snapshot) => {
-                    if (!snapshot.exists()) {
-                        // Se a fase1 não existir, criar e marcar como true
-                        dbRef.set(true).then(() => {
-                            console.log('Fase 1 criada com sucesso');
-                        }).catch((error) => {
-                            console.error('Erro ao criar fase 1:', error);
-                        });
-                    } else {
-                        console.log('Fase 1 já existe');
-                    }
-                })
-                .catch((error) => {
-                    console.error('Erro ao verificar a fase 1:', error);
-                });
-        }
-
-        // Função para garantir que o usuário esteja autenticado e criar fase1
-        firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
-                // Usuário autenticado, verifica e cria a fase1 se necessário
-                createPhase1IfNotExists(user.uid);
-            } else {
-                console.error('Usuário não autenticado');
-            }
-        });
+        // Test Firebase connection
+        firebase.database().ref('/').once('value')
+          .then((snapshot) => {
+            console.log('Database connected:', snapshot.val());
+          })
+          .catch((error) => {
+            console.error('Error connecting to database:', error);
+          });
     </script>
 </head>
 <body>
