--- a/Level1/index.html
+++ b/Level1/index.html
@@ -72,7 +72,7 @@
         </header>
         <main>
             <div class="units">
-                <a href="Unit1/index.html" id="unit1" class="unit-button disabled">Unit 1</a>
+                <a href="Unit1/index.html" id="unit1" class="unit-button">Unit 1</a>
                 <a href="Unit2/index.html" id="unit2" class="unit-button disabled">Unit 2</a>
                 <a href="Unit3/index.html" id="unit3" class="unit-button disabled">Unit 3</a>
                 <a href="Unit4/index.html" id="unit4" class="unit-button disabled">Unit 4</a>
@@ -158,6 +158,42 @@
             } else {
                 console.error("Erro: Usuário não autenticado");
             }
+        });
+
+        // Remover o estado 'disabled' da Unit1 para todos os usuários
+        document.getElementById('unit1').classList.remove('disabled');
+
+        // Adicionar evento de clique na Unit1
+        document.getElementById('unit1').addEventListener('click', () => {
+            // Verificar se o usuário está autenticado
+            auth.onAuthStateChanged(user => {
+                if (user) {
+                    const userId = user.uid;
+                    const dbPath = `usuarios/${userId}/progresso/Level1/Unit1/fase1`;
+
+                    // Verificar se a chave fase1 já existe
+                    db.ref(dbPath).once('value')
+                        .then(snapshot => {
+                            if (!snapshot.exists()) {
+                                // Se não existir, criar chave e definir fase1 como true
+                                db.ref(dbPath).set(true)
+                                    .then(() => {
+                                        console.log('Fase 1 criada com sucesso!');
+                                    })
+                                    .catch(error => {
+                                        console.error('Erro ao criar fase1:', error);
+                                    });
+                            } else {
+                                console.log('Fase 1 já existe.');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Erro ao verificar fase1:', error);
+                        });
+                } else {
+                    console.error('Erro: Usuário não autenticado.');
+                }
+            });
         });
     </script>
 </body>
