--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -26,7 +26,7 @@
       // Inicializa o Firebase
       firebase.initializeApp(firebaseConfig);
 
-      // Função para identificar Level, Unit e Fase pelo URL
+      // Função para identificar Level, Unit e fase atual pelo URL
       function getParamsFromURL() {
           const urlParams = new URLSearchParams(window.location.search);
           const fase = urlParams.get('fase');
@@ -40,14 +40,7 @@
       function salvarProgressoAluno(uid, fase) {
           const { level, unit } = getParamsFromURL();
 
-          if (fase === '1' && level === 'Level1' && unit === 'Unit1') {
-              // Se for fase 1 da Unit1 do Level1, cria level1 e level2 como true
-              const firebasePath = `usuarios/${uid}/progresso/Level1/Unit1`;
-              firebase.database().ref(firebasePath).set({
-                  level1: true,
-                  level2: true
-              });
-          } else if (fase === 'last') {
+          if (fase === 'last') {
               // Se for a última fase (fase=last), criar Level e Unit subsequentes
               const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
               const firebasePath = `usuarios/${uid}/progresso/${nextLevel}/Unit1/fase1`;
@@ -282,7 +275,7 @@
             if (index === cardsData.length - 1) {
                 firebase.auth().onAuthStateChanged(function(user) {
                     if (user) {
-                        salvarProgressoAluno(user.uid, 'fase2');
+                        salvarProgressoAluno(user.uid, getParamsFromURL().fase);
                     } else {
                         console.log("Nenhum usuário logado.");
                     }
@@ -325,6 +318,12 @@
             displayCard(currentCardIndex);
         }
 
+        // Função para inicializar a página com o primeiro card
+        async function init() {
+            cardsData = await loadContent();
+            displayCard(0);
+        }
+
         // Função para gerar o PDF com o texto da história
         function generatePDF() {
             const { jsPDF } = window.jspdf;
@@ -350,12 +349,6 @@
             });
 
             doc.save('story.pdf');
-        }
-
-        // Função para inicializar a página com o primeiro card
-        async function init() {
-            cardsData = await loadContent();
-            displayCard(0);
         }
 
         init();
