--- a/Level1/Unit1/Flashcards/index.html
+++ b/Level1/Unit1/Flashcards/index.html
@@ -135,6 +135,7 @@
         .back-button:hover {
             background-color: #555;
         }
+
     </style>
 </head>
 <body>
@@ -306,9 +307,15 @@
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
             
             try {
-                // Sempre libera a próxima fase (mesmo se a fase atual já estiver concluída)
-                await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-                console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
+                if (currentPhase === "last") {
+                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    await dbRef.set({ fase1: true });
+                    console.log(`Level ${nextLevel} / Unit 1 / Fase 1 criada.`);
+                } else {
+                    // Libera a próxima fase
+                    await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                    console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
+                }
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
