--- a/Level1/Unit1/Flashcards/index.html
+++ b/Level1/Unit1/Flashcards/index.html
@@ -17,19 +17,48 @@
             margin: 0;
             padding: 20px;
         }
+
+        /* Contêiner para o título e o botão Back */
+        .header-container {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            max-width: 1000px; /* Ajuste conforme o tamanho máximo desejado */
+            margin-bottom: 20px;
+        }
+
         h1 {
             font-size: 2em;
-            margin-bottom: 20px;
+            margin: 0; /* Remover margem extra */
             text-align: center;
             color: #333;
-            width: 100%;
+            flex-grow: 1; /* Garantir que o título ocupe o espaço restante */
         }
+
+        /* Botão Back */
+        .back-button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-right: 20px; /* Espaçamento ao lado do título */
+            align-self: flex-start;
+        }
+        .back-button:hover {
+            background-color: #555;
+        }
+
+        /* Contêiner dos flashcards */
         #flashcards-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
         }
+
         .card {
             width: 200px;
             height: 300px;
@@ -37,6 +66,7 @@
             margin: 20px;
             position: relative;
         }
+
         .card-inner {
             width: 100%;
             height: 100%;
@@ -45,15 +75,18 @@
             transition: transform 0.6s;
             transform-style: preserve-3d;
         }
+
         .card.rotated .card-inner {
             transform: rotateY(180deg);
         }
+
         .card-front, .card-back {
             position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
         }
+
         .card-front {
             background-color: #fff;
             display: flex;
@@ -61,10 +94,12 @@
             align-items: center;
             border: 1px solid #ccc;
         }
+
         .card-front img {
             max-width: 100%;
             max-height: 100%;
         }
+
         .card-back {
             background-color: #f8f8f8;
             color: #333;
@@ -76,6 +111,7 @@
             font-size: 20px;
             padding: 10px;
         }
+
         .play-sound {
             position: absolute;
             top: 10px;
@@ -84,6 +120,7 @@
             height: 24px;
             cursor: pointer;
         }
+
         /* Estilo do modal de conclusão */
         #completion-modal {
             display: none;
@@ -98,6 +135,7 @@
             z-index: 1000;
             text-align: center;
         }
+
         #completion-modal button {
             margin-top: 20px;
             padding: 10px 20px;
@@ -106,9 +144,11 @@
             border: none;
             cursor: pointer;
         }
+
         #completion-modal button:hover {
             background-color: #555;
         }
+
         #overlay {
             display: none;
             position: fixed;
@@ -120,26 +160,30 @@
             z-index: 999;
         }
 
-        /* Botão Back */
-        .back-button {
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-top: 20px;
-            position: fixed;
-            top: 20px;
-            left: 20px;
-        }
-        .back-button:hover {
-            background-color: #555;
-        }
+        /* Para telas menores */
+        @media (max-width: 600px) {
+            .header-container {
+                flex-direction: column;
+                align-items: flex-start;
+            }
 
+            h1 {
+                text-align: center;
+                margin-top: 10px;
+            }
+
+            .back-button {
+                margin-bottom: 10px; /* Dar um espaçamento adequado no mobile */
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Hannah FlashCards</h1>
+    <div class="header-container">
+        <!-- Botão Back -->
+        <button class="back-button" onclick="goBack()">Back</button>
+        <h1>Hannah FlashCards</h1>
+    </div>
     <div id="flashcards-container"></div>
 
     <!-- Modal de conclusão -->
@@ -149,9 +193,6 @@
         <p>Congratulations! You have completed this phase.</p>
         <button onclick="closeModal()">Close</button>
     </div>
-
-    <!-- Botão Back -->
-    <button class="back-button" onclick="goBack()">Back</button>
 
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
