--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -59,7 +59,9 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-image: url('../../../imagens/fundo.png'); /* Imagem de fundo */
+            background-repeat: repeat; /* Repetir a imagem de fundo */
+            background-size: auto; /* O tamanho da imagem permanece o mesmo */
             color: #333;
             display: flex;
             justify-content: center;
@@ -67,6 +69,7 @@
             flex-direction: column;
             min-height: 100vh;
         }
+
         .container {
             max-width: 900px;
             width: 100%;
@@ -182,7 +185,7 @@
     </style>
 </head>
 <body>
-    <button onclick="window.location.href='../index.html'">Back</button>
+    <button onclick="window.history.back()">Back</button> <!-- Aqui o botão "Back" retorna para a página anterior -->
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
