--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -8,6 +8,9 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-image: url('../../../imagens/fundo.png'); /* Adiciona a imagem de fundo */
+            background-repeat: repeat; /* Faz com que a imagem se repita */
+            background-size: auto; /* Mantém o tamanho original da imagem */
             background-color: white; /* Fundo branco */
         }
 
@@ -104,7 +107,6 @@
 <button onclick="window.location.href='../index.html'" style="padding: 10px 20px; font-size: 1em; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
-
 
 <h1>Hannah Quiz</h1>
 
