--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -339,15 +339,15 @@
         const nextPhase = parseInt(currentPhase) + 1;
 
         const { level, unit } = getLevelAndUnitFromURL(); 
-        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-        
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}`);
+
         try {
             if (currentPhase === "last") {
-                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                await dbRef.set({ fase1: true });
-                console.log(`Level ${nextLevel} / Unit 1 / Fase 1 criada.`);
+                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                await dbRef.child(nextUnit).set({ fase1: true });
+                console.log(`Criada: ${level} / ${nextUnit} / fase1`);
             } else {
-                await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                await dbRef.child(unit).update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
                 console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
             }
         } catch (error) {
