--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -176,7 +176,25 @@
     <button onclick="closeModal()">Close</button>
 </div>
 
+<!-- Firebase Scripts -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
 <script>
+    // Configuração do Firebase
+    const firebaseConfig = {
+        apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+        authDomain: "hannahenglishcourse.firebaseapp.com",
+        projectId: "hannahenglishcourse",
+        storageBucket: "hannahenglishcourse.appspot.com",
+        messagingSenderId: "449818788486",
+        appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+        measurementId: "G-07VVJG9LRS",
+        databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+    };
+    firebase.initializeApp(firebaseConfig);
+
     let currentQuestionIndex = 0;
     let questions = [];
     let answeredQuestions = [];
@@ -206,7 +224,7 @@
             questions.push(currentQuestion);
         }
 
-        answeredQuestions = new Array(questions.length).fill(false);  // Inicializa o array de respostas
+        answeredQuestions = new Array(questions.length).fill(false); 
         displayQuestion();
     }
 
@@ -267,11 +285,11 @@
             feedbackAudio.play();
             feedbackDiv.style.display = 'block';
             gifContainer.style.display = 'block';
-            answeredQuestions[currentQuestionIndex] = true;  // Marca a questão como respondida corretamente
+            answeredQuestions[currentQuestionIndex] = true; 
             setTimeout(() => {
                 hideGIF();
                 showNextQuestion();
-                checkCompletion();  // Verifica se todas as questões foram respondidas
+                checkCompletion(); 
             }, 2000);
         } else {
             feedbackImg.src = 'errado.gif'; 
@@ -308,7 +326,7 @@
     function checkCompletion() {
         if (answeredQuestions.every((answered) => answered)) {
             showModal();
-            ensureUserIsAuthenticated(updateNextPhase); // Atualiza o Firebase
+            ensureUserIsAuthenticated(updateNextPhase);
         }
     }
 
@@ -322,32 +340,34 @@
         document.getElementById('overlay').style.display = 'none';
     }
 
-    // Função para garantir que o usuário esteja autenticado
     function ensureUserIsAuthenticated(callback) {
         firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
-                callback(user.uid); // Usuário autenticado
+                callback(user.uid);
             } else {
                 console.error("Usuário não autenticado");
             }
         });
     }
 
-    // Função para atualizar a fase no Firebase
     async function updateNextPhase(userId) {
         const currentPhase = getPhaseFromURL(); 
-        const nextPhase = parseInt(currentPhase) + 1;
-
         const { level, unit } = getLevelAndUnitFromURL(); 
         const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}`);
-
+        
         try {
             if (currentPhase === "last") {
-                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                const nextUnitNumber = parseInt(unit.replace('Unit', '')) + 1;
+                const nextUnit = `Unit${nextUnitNumber}`;
+
                 await dbRef.child(nextUnit).set({ fase1: true });
                 console.log(`Criada: ${level} / ${nextUnit} / fase1`);
             } else {
-                await dbRef.child(unit).update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                const nextPhase = parseInt(currentPhase) + 1;
+                await dbRef.child(unit).update({ 
+                    [`fase${currentPhase}`]: true, 
+                    [`fase${nextPhase}`]: true 
+                });
                 console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
             }
         } catch (error) {
@@ -357,8 +377,7 @@
 
     function getPhaseFromURL() {
         const params = new URLSearchParams(window.location.search);
-        const phase = params.get('fase'); 
-        return phase === 'last' ? 'last' : phase; // Retorna 'last' como string
+        return params.get('fase') === 'last' ? 'last' : params.get('fase');
     }
 
     function getLevelAndUnitFromURL() {
