--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -360,8 +360,9 @@
                 const nextUnitNumber = parseInt(unit.replace('Unit', '')) + 1;
                 const nextUnit = `Unit${nextUnitNumber}`;
 
+                // Cria a próxima Unit com fase1 definida como true
                 await dbRef.child(nextUnit).set({ fase1: true });
-                console.log(`Criada: ${level} / ${nextUnit} / fase1`);
+                console.log(`Criada: ${level} / ${nextUnit} / fase1: true`);
             } else {
                 const nextPhase = parseInt(currentPhase) + 1;
                 await dbRef.child(unit).update({ 
