--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -176,7 +176,6 @@
     <button onclick="closeModal()">Close</button>
 </div>
 
-<!-- Firebase Scripts -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -193,6 +192,8 @@
         measurementId: "G-07VVJG9LRS",
         databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
     };
+
+    // Inicializa o Firebase
     firebase.initializeApp(firebaseConfig);
 
     let currentQuestionIndex = 0;
@@ -224,7 +225,7 @@
             questions.push(currentQuestion);
         }
 
-        answeredQuestions = new Array(questions.length).fill(false); 
+        answeredQuestions = new Array(questions.length).fill(false);
         displayQuestion();
     }
 
@@ -285,11 +286,11 @@
             feedbackAudio.play();
             feedbackDiv.style.display = 'block';
             gifContainer.style.display = 'block';
-            answeredQuestions[currentQuestionIndex] = true; 
+            answeredQuestions[currentQuestionIndex] = true;
             setTimeout(() => {
                 hideGIF();
                 showNextQuestion();
-                checkCompletion(); 
+                checkCompletion();
             }, 2000);
         } else {
             feedbackImg.src = 'errado.gif'; 
@@ -354,21 +355,15 @@
         const currentPhase = getPhaseFromURL(); 
         const { level, unit } = getLevelAndUnitFromURL(); 
         const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}`);
-        
+
         try {
             if (currentPhase === "last") {
-                const nextUnitNumber = parseInt(unit.replace('Unit', '')) + 1;
-                const nextUnit = `Unit${nextUnitNumber}`;
-
-                // Cria a próxima Unit com fase1 definida como true
+                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                 await dbRef.child(nextUnit).set({ fase1: true });
-                console.log(`Criada: ${level} / ${nextUnit} / fase1: true`);
+                console.log(`Unit ${nextUnit} criada com fase1 true dentro de ${level}.`);
             } else {
                 const nextPhase = parseInt(currentPhase) + 1;
-                await dbRef.child(unit).update({ 
-                    [`fase${currentPhase}`]: true, 
-                    [`fase${nextPhase}`]: true 
-                });
+                await dbRef.child(unit).update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
                 console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
             }
         } catch (error) {
@@ -378,11 +373,11 @@
 
     function getPhaseFromURL() {
         const params = new URLSearchParams(window.location.search);
-        return params.get('fase') === 'last' ? 'last' : params.get('fase');
+        return params.get('fase'); 
     }
 
     function getLevelAndUnitFromURL() {
-        const url = window.location.pathname; 
+        const url = window.location.pathname;
         const parts = url.split('/');
         const level = parts[1];
         const unit = parts[2];
