--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Quiz</title>
     <style>
+        /* Estilos existentes mantidos */
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
