--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -360,11 +360,15 @@
         try {
             if (currentPhase === "last") {
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                // Cria a nova unidade e define a fase1 como true dentro dela
                 await dbRef.child(nextUnit).set({ fase1: true });
                 console.log(`Unit ${nextUnit} criada com fase1 true dentro de ${level}.`);
             } else {
                 const nextPhase = parseInt(currentPhase) + 1;
-                await dbRef.child(unit).update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                await dbRef.child(unit).update({ 
+                    [`fase${currentPhase}`]: true, 
+                    [`fase${nextPhase}`]: true 
+                });
                 console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
             }
         } catch (error) {
