--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -360,8 +360,8 @@
         try {
             if (currentPhase === "last") {
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                // Cria a nova unidade e define a fase1 como true dentro dela
-                await dbRef.child(nextUnit).set({ fase1: true });
+                // Atualiza a nova unidade e define a fase1 como true dentro dela
+                await dbRef.child(nextUnit).update({ fase1: true });
                 console.log(`Unit ${nextUnit} criada com fase1 true dentro de ${level}.`);
             } else {
                 const nextPhase = parseInt(currentPhase) + 1;
