--- a/Level1/Unit1/QUIZ/index.html
+++ b/Level1/Unit1/QUIZ/index.html
@@ -360,9 +360,13 @@
         try {
             if (currentPhase === "last") {
                 const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                // Atualiza a nova unidade e define a fase1 como true dentro dela
-                await dbRef.child(nextUnit).update({ fase1: true });
-                console.log(`Unit ${nextUnit} criada com fase1 true dentro de ${level}.`);
+                // Primeiro, cria a nova Unit
+                await dbRef.child(nextUnit).set({});
+                console.log(`Unit ${nextUnit} criada dentro de ${level}.`);
+
+                // Em seguida, adiciona a fase1 como true dentro da nova Unit
+                await dbRef.child(`${nextUnit}/fase1`).set(true);
+                console.log(`Fase1 marcada como true dentro de ${nextUnit}.`);
             } else {
                 const nextPhase = parseInt(currentPhase) + 1;
                 await dbRef.child(unit).update({ 
