--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -36,20 +36,32 @@
           return { level, unit, fase };
       }
 
-      // Função para salvar progresso no Firebase
-      function salvarProgressoAluno(uid, fase) {
+      // Função para salvar progresso no Firebase com todas as regras
+      async function salvarProgressoAluno(uid, fase) {
           const { level, unit } = getParamsFromURL();
+          const dbRef = firebase.database().ref(`usuarios/${uid}/progresso`);
 
-          if (fase === 'last') {
-              // Se for a última fase (fase=last), criar Level e Unit subsequentes
-              const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-              const firebasePath = `usuarios/${uid}/progresso/${nextLevel}/Unit1/fase1`;
-              firebase.database().ref(firebasePath).set(true);
-          } else {
-              // Para qualquer outra fase, criar a próxima fase subsequente
-              const nextFase = `fase${parseInt(fase) + 1}`;
-              const firebasePath = `usuarios/${uid}/progresso/${level}/${unit}/${nextFase}`;
-              firebase.database().ref(firebasePath).set(true);
+          try {
+              if (fase === "end") {
+                  // Criar nova Level com Unit1/fase1
+                  const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                  await dbRef.child(nextLevel).set({});
+                  await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
+                  console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
+              } else if (fase === "last") {
+                  // Criar nova Unit com fase1
+                  const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                  await dbRef.child(`${level}/${nextUnit}`).set({});
+                  await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
+                  console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
+              } else {
+                  // Criar próxima fase na mesma Unit
+                  const nextFase = `fase${parseInt(fase) + 1}`;
+                  await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
+                  console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
+              }
+          } catch (error) {
+              console.error("Erro ao atualizar o progresso da fase:", error);
           }
       }
     </script>
@@ -59,9 +71,9 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('../../../imagens/fundo.png'); /* Imagem de fundo */
-            background-repeat: repeat; /* Repetir a imagem de fundo */
-            background-size: auto; /* O tamanho da imagem permanece o mesmo */
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
             color: #333;
             display: flex;
             justify-content: center;
@@ -137,18 +149,6 @@
             width: 100%;
             margin-top: 60px;
         }
-        .businessman {
-            position: absolute;
-            top: 10px;
-            right: 30px;
-            width: 40px;
-            height: 40px;
-            object-fit: contain;
-            cursor: pointer;
-            z-index: 10;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 50%;
-        }
         button {
             margin: 20px;
             padding: 15px 30px;
@@ -162,60 +162,29 @@
         button:hover {
             background-color: #45a049;
         }
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            margin-top: 20px;
-        }
-        .button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        .pdf-button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
-    <button onclick="window.history.back()">Back</button> <!-- Aqui o botão "Back" retorna para a página anterior -->
+    <button onclick="window.history.back()">Back</button>
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
-        <div class="button-container">
-            <button id="toggleButton" onclick="toggleView()">Read the story</button>
-        </div>
         <div class="title" id="storyTitle"></div>
         <div id="cardsContainer"></div>
         <div class="navigation">
             <button id="prevBtn" onclick="showPreviousCard()">Previous</button>
             <button id="nextBtn" onclick="showNextCard()">Next</button>
         </div>
-        <div class="pdf-button-container">
-            <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
-        </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
-        let showText = false;
         let currentCardIndex = 0;
         let cardsData = [];
-        let storyText = '';
-        let speechSynthesis = window.speechSynthesis;
-        let currentUtterance = null;
+        let showText = false;
 
         // Função para alternar entre texto e imagem
         function toggleView() {
             showText = !showText;
-            document.getElementById("toggleButton").innerText = showText ? "See the story" : "Read the story";
             displayCard(currentCardIndex);
         }
 
@@ -227,15 +196,11 @@
             let cards = [];
             let currentImage = '';
             let currentText = '';
-            storyText = '';
 
             lines.forEach(line => {
-                if (line.startsWith('#title:')) {
-                    document.getElementById('storyTitle').innerText = line.replace('#title:', '').trim();
-                } else if (line.startsWith('#imagem')) {
+                if (line.startsWith('#imagem')) {
                     if (currentImage && currentText) {
                         cards.push({ image: currentImage, text: currentText });
-                        storyText += currentText + '\n\n';
                     }
                     currentImage = line.replace('#', '').trim();
                     currentText = '';
@@ -246,7 +211,6 @@
 
             if (currentImage && currentText) {
                 cards.push({ image: currentImage, text: currentText });
-                storyText += currentText + '\n\n';
             }
 
             return cards;
@@ -266,19 +230,14 @@
                 cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
-            const businessmanImage = document.createElement('img');
-            businessmanImage.src = 'businessman.png';
-            businessmanImage.className = 'businessman';
-            businessmanImage.onclick = () => toggleSpeech(cardData.text);
-
-            cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
 
             // Verifica se este é o último card
             if (index === cardsData.length - 1) {
                 firebase.auth().onAuthStateChanged(function(user) {
                     if (user) {
-                        salvarProgressoAluno(user.uid, getParamsFromURL().fase);
+                        const { fase } = getParamsFromURL();
+                        salvarProgressoAluno(user.uid, fase);
                     } else {
                         console.log("Nenhum usuário logado.");
                     }
@@ -292,31 +251,14 @@
             nextButton.style.display = (index === cardsData.length - 1) ? 'none' : 'block';
         }
 
-        // Função para iniciar ou parar a leitura do texto
-        function toggleSpeech(text) {
-            if (speechSynthesis.speaking) {
-                speechSynthesis.cancel();
-            } else {
-                currentUtterance = new SpeechSynthesisUtterance(text);
-                currentUtterance.lang = 'en-US';
-                speechSynthesis.speak(currentUtterance);
-            }
-        }
-
         // Função para exibir o próximo card
         function showNextCard() {
-            if (speechSynthesis.speaking) {
-                speechSynthesis.cancel();
-            }
             currentCardIndex = (currentCardIndex + 1) % cardsData.length;
             displayCard(currentCardIndex);
         }
 
         // Função para exibir o card anterior
         function showPreviousCard() {
-            if (speechSynthesis.speaking) {
-                speechSynthesis.cancel();
-            }
             currentCardIndex = (currentCardIndex - 1 + cardsData.length) % cardsData.length;
             displayCard(currentCardIndex);
         }
@@ -325,33 +267,6 @@
         async function init() {
             cardsData = await loadContent();
             displayCard(0);
-        }
-
-        // Função para gerar o PDF com o texto da história
-        function generatePDF() {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
-
-            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);
-            doc.setFontSize(12);
-            doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
-            doc.setFontSize(20);
-            doc.text("Hannah StoryCard", 105, 80, { align: "center" });
-            doc.setFontSize(12);
-            let y = 100;
-            const lineHeight = 10;
-            const lines = doc.splitTextToSize(storyText, 180);
-
-            lines.forEach(line => {
-                if (y > 280) {
-                    doc.addPage();
-                    y = 20;
-                }
-                doc.text(line, 10, y);
-                y += lineHeight;
-            });
-
-            doc.save('story.pdf');
         }
 
         init();
