--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -11,59 +11,59 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 
     <script>
-      // Configuração do Firebase
-      var firebaseConfig = {
-        apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-        authDomain: "hannahenglishcourse.firebaseapp.com",
-        projectId: "hannahenglishcourse",
-        storageBucket: "hannahenglishcourse.appspot.com",
-        messagingSenderId: "449818788486",
-        appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-        measurementId: "G-07VVJG9LRS",
-        databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
-      };
-      
-      // Inicializa o Firebase
-      firebase.initializeApp(firebaseConfig);
+        // Configuração do Firebase
+        var firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
 
-      // Função para identificar Level, Unit e fase atual pelo URL
-      function getParamsFromURL() {
-          const urlParams = new URLSearchParams(window.location.search);
-          const fase = urlParams.get('fase');
-          const pathParts = window.location.pathname.split('/');
-          const level = pathParts.find(part => part.startsWith('Level'));
-          const unit = pathParts.find(part => part.startsWith('Unit'));
-          return { level, unit, fase };
-      }
+        // Inicializa o Firebase
+        firebase.initializeApp(firebaseConfig);
 
-      // Função para salvar progresso no Firebase com todas as regras
-      async function salvarProgressoAluno(uid, fase) {
-          const { level, unit } = getParamsFromURL();
-          const dbRef = firebase.database().ref(`usuarios/${uid}/progresso`);
+        // Função para identificar Level, Unit e fase atual pelo URL
+        function getParamsFromURL() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const fase = urlParams.get('fase');
+            const pathParts = window.location.pathname.split('/');
+            const level = pathParts.find(part => part.startsWith('Level'));
+            const unit = pathParts.find(part => part.startsWith('Unit'));
+            return { level, unit, fase };
+        }
 
-          try {
-              if (fase === "end") {
-                  // Criar nova Level com Unit1/fase1
-                  const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                  await dbRef.child(nextLevel).set({});
-                  await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
-                  console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
-              } else if (fase === "last") {
-                  // Criar nova Unit com fase1
-                  const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                  await dbRef.child(`${level}/${nextUnit}`).set({});
-                  await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
-                  console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
-              } else {
-                  // Criar próxima fase na mesma Unit
-                  const nextFase = `fase${parseInt(fase) + 1}`;
-                  await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
-                  console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
-              }
-          } catch (error) {
-              console.error("Erro ao atualizar o progresso da fase:", error);
-          }
-      }
+        // Função para salvar progresso no Firebase com todas as regras
+        async function salvarProgressoAluno(uid, fase) {
+            const { level, unit } = getParamsFromURL();
+            const dbRef = firebase.database().ref(`usuarios/${uid}/progresso`);
+
+            try {
+                if (fase === "end") {
+                    // Criar nova Level com Unit1/fase1
+                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    await dbRef.child(nextLevel).set({});
+                    await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
+                    console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
+                } else if (fase === "last") {
+                    // Criar nova Unit com fase1
+                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    await dbRef.child(`${level}/${nextUnit}`).set({});
+                    await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
+                    console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
+                } else {
+                    // Criar próxima fase na mesma Unit
+                    const nextFase = `fase${parseInt(fase) + 1}`;
+                    await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
+                    console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
+                }
+            } catch (error) {
+                console.error("Erro ao atualizar o progresso da fase:", error);
+            }
+        }
     </script>
 
     <style>
@@ -123,31 +123,29 @@
         }
         .active {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
         }
         .card img {
             max-width: 100%;
             max-height: calc(100vh - 150px);
-            width: auto;
-            height: auto;
             border-radius: 10px;
             margin-bottom: 20px;
-            transition: transform 0.3s ease;
         }
         .card p {
             font-size: 1.5em;
             text-align: center;
             color: #333;
             margin: 0;
-            word-break: break-word;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100px;
-            width: 100%;
-            margin-top: 60px;
+        }
+        .businessman {
+            position: absolute;
+            top: 10px;
+            right: 30px;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            z-index: 10;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
         }
         button {
             margin: 20px;
@@ -162,6 +160,20 @@
         button:hover {
             background-color: #45a049;
         }
+        .navigation {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: 20px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -169,6 +181,9 @@
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
+        <div class="button-container">
+            <button id="toggleButton" onclick="toggleView()">Read the story</button>
+        </div>
         <div class="title" id="storyTitle"></div>
         <div id="cardsContainer"></div>
         <div class="navigation">
@@ -178,13 +193,14 @@
     </div>
 
     <script>
+        let showText = false;
         let currentCardIndex = 0;
         let cardsData = [];
-        let showText = false;
 
         // Função para alternar entre texto e imagem
         function toggleView() {
             showText = !showText;
+            document.getElementById("toggleButton").innerText = showText ? "See the story" : "Read the story";
             displayCard(currentCardIndex);
         }
 
@@ -230,9 +246,15 @@
                 cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
+            const businessmanImage = document.createElement('img');
+            businessmanImage.src = 'businessman.png';
+            businessmanImage.className = 'businessman';
+            businessmanImage.onclick = () => toggleSpeech(cardData.text);
+
+            cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
 
-            // Verifica se este é o último card
+            // Verifica se é o último card
             if (index === cardsData.length - 1) {
                 firebase.auth().onAuthStateChanged(function(user) {
                     if (user) {
@@ -245,10 +267,19 @@
             }
 
             // Atualiza botões de navegação
-            const prevButton = document.getElementById('prevBtn');
-            const nextButton = document.getElementById('nextBtn');
-            prevButton.style.display = (index === 0) ? 'none' : 'block';
-            nextButton.style.display = (index === cardsData.length - 1) ? 'none' : 'block';
+            document.getElementById('prevBtn').style.display = (index === 0) ? 'none' : 'block';
+            document.getElementById('nextBtn').style.display = (index === cardsData.length - 1) ? 'none' : 'block';
+        }
+
+        // Função para iniciar ou parar a leitura do texto
+        function toggleSpeech(text) {
+            if (window.speechSynthesis.speaking) {
+                window.speechSynthesis.cancel();
+            } else {
+                let utterance = new SpeechSynthesisUtterance(text);
+                utterance.lang = 'en-US';
+                window.speechSynthesis.speak(utterance);
+            }
         }
 
         // Função para exibir o próximo card
